@@ -94,6 +94,7 @@ st.view.overview_diagram.Action.text=_Overview Diagram
 st.view.overview_diagram.Action.shortDescription=Overview Diagram
 
 st.view.help.text=_Help
+st.view.website.Action.text=Project _Website
 st.view.about.Action.text=_About
 st.view.about.Action.shortDescription=About
 
