@@ -92,6 +92,7 @@ st.view.overview_diagram.Action.text=\u00DCbersichts_diagramm
 st.view.overview_diagram.Action.shortDescription=\u00DCbersichtsdiagramm
 
 st.view.help.text=_Hilfe
+st.view.website.Action.text=_Website des Projekts
 st.view.about.Action.text=_Info
 st.view.about.Action.shortDescription=Info
 
